--- a/index.html
+++ b/index.html
@@ -3,192 +3,262 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy New Year 🎉</title>
+  <title>Happy New Year 2026 🎉</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       height: 100vh;
-      font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: radial-gradient(circle at top, #1a2a6c, #0f2027 60%);
+      font-family: 'Poppins', sans-serif;
+      background: url('https://static.vecteezy.com/system/resources/thumbnails/050/781/873/small/beauty-purple-sunset-and-silhouette-from-tree-mirroring-reflection-on-ocean-water-photo.JPG') no-repeat center center/cover;
       color: #fff;
       overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      position: relative;
+    }
+
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: linear-gradient(to bottom, rgba(0,0,20,0.7), rgba(0,0,30,0.9));
+      z-index: 1;
     }
 
     .container {
+      position: relative;
       z-index: 2;
       padding: 2rem;
-      animation: fadeIn 2s ease forwards;
-    }
-
-    h1 {
-      font-size: clamp(2.5rem, 6vw, 4.5rem);
-      letter-spacing: 2px;
-      margin-bottom: 1rem;
-      background: linear-gradient(45deg, #ffd700, #ff9f1c, #ffd700);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: glow 3s ease-in-out infinite;
-    }
-
-    h2 {
-      font-size: clamp(1.2rem, 3vw, 1.8rem);
-      font-weight: 300;
-      margin-bottom: 2rem;
-      opacity: 0.9;
+      max-width: 90%;
+      animation: fadeInUp 2s ease forwards;
     }
 
     .year {
-      font-size: clamp(4rem, 10vw, 7rem);
-      font-weight: 800;
+      font-family: 'Playfair Display', serif;
+      font-size: clamp(5rem, 12vw, 10rem);
+      font-weight: 900;
+      letter-spacing: 5px;
+      margin-bottom: 1rem;
+      background: linear-gradient(45deg, #ffd700, #ffeb3b, #ffa500);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 30px rgba(255,215,0,0.6);
+      animation: pulseGlow 4s ease-in-out infinite;
+    }
+
+    h1 {
+      font-size: clamp(2.8rem, 7vw, 5rem);
+      letter-spacing: 3px;
       margin-bottom: 1.5rem;
-      color: #ffffff;
-      text-shadow: 0 0 20px rgba(255,255,255,0.4);
+      animation: glow 3s ease-in-out infinite alternate;
+    }
+
+    .message {
+      font-size: clamp(1.2rem, 3.5vw, 1.8rem);
+      font-weight: 300;
+      max-width: 800px;
+      margin: 0 auto 2.5rem;
+      opacity: 0.95;
+      line-height: 1.6;
     }
 
     button {
-      padding: 0.9rem 2rem;
-      font-size: 1rem;
+      padding: 1rem 2.5rem;
+      font-size: 1.2rem;
       border: none;
-      border-radius: 999px;
+      border-radius: 50px;
       cursor: pointer;
-      background: linear-gradient(45deg, #ff9f1c, #ffd700);
+      background: linear-gradient(45deg, #ffd700, #ff9f1c);
       color: #1a1a1a;
       font-weight: 600;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      transition: all 0.3s ease;
     }
 
     button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 15px 30px rgba(0,0,0,0.4);
+      transform: translateY(-5px) scale(1.05);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
     }
 
-    /* Fireworks */
-    .firework {
+    /* Fireworks container and particles */
+    .firework-container {
       position: absolute;
-      width: 6px;
-      height: 6px;
-      background: transparent;
+      width: 8px;
+      height: 8px;
+      pointer-events: none;
+    }
+
+    .particle {
+      position: absolute;
+      width: 8px;
+      height: 8px;
       border-radius: 50%;
-      animation: explode 1.5s ease-out infinite;
+      animation: burst 1.5s ease-out forwards;
     }
 
-    @keyframes explode {
-      0% {
-        box-shadow:
-          0 0 #ffd700,
-          0 0 #ff9f1c,
-          0 0 #ff4d4d,
-          0 0 #4dd2ff;
-        opacity: 1;
-      }
-      100% {
-        box-shadow:
-          -80px -80px #ffd700,
-          80px -80px #ff9f1c,
-          -80px 80px #ff4d4d,
-          80px 80px #4dd2ff;
-        opacity: 0;
-      }
+    @keyframes burst {
+      0% { opacity: 1; transform: translate(0, 0) scale(0); }
+      100% { opacity: 0; transform: translate(var(--x), var(--y)) scale(1); }
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+    /* Falling confetti */
+    .confetti {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: #ffd700;
+      opacity: 0.8;
+      animation: fall linear infinite;
+    }
+
+    @keyframes fall {
+      to { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(50px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes glow {
-      0%, 100% { text-shadow: 0 0 10px rgba(255,215,0,0.4); }
-      50% { text-shadow: 0 0 25px rgba(255,215,0,0.9); }
+      0% { text-shadow: 0 0 20px rgba(255,215,0,0.5); }
+      100% { text-shadow: 0 0 40px rgba(255,215,0,1); }
+    }
+
+    @keyframes pulseGlow {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
     }
 
     footer {
       position: absolute;
       bottom: 20px;
       width: 100%;
-      text-align: center;
+      z-index: 2;
       font-size: 0.9rem;
       opacity: 0.7;
     }
-      
-    /* Rocket */
-    .rocket {
+
+    .decoration-top, .decoration-bottom {
       position: absolute;
-      bottom: -20px;
+      width: 100%;
+      height: 100px;
+      pointer-events: none;
+      overflow: hidden;
+    }
+
+    .decoration-top { top: 0; }
+    .decoration-bottom { bottom: 0; transform: rotate(180deg); }
+
+    .stars {
+      position: absolute;
       width: 4px;
-      height: 20px;
-      background: linear-gradient(to top, #ff4d4d, #ffd700);
-      border-radius: 2px;
-      animation: flyUp 1.5s ease-out forwards;
-      box-shadow: 0 0 10px rgba(255,215,0,0.8);
+      height: 4px;
+      background: #fff;
+      border-radius: 50%;
+      box-shadow: 0 0 10px #fff;
+      animation: twinkle 5s infinite;
     }
 
-    @keyframes flyUp {
-      from {
-        transform: translateY(0);
-        opacity: 1;
-      }
-      to {
-        transform: translateY(-90vh);
-        opacity: 0;
-      }
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.5; }
+      50% { opacity: 1; }
     }
-
   </style>
 </head>
 <body>
+  <div class="decoration-top"></div>
+  <div class="decoration-bottom"></div>
+
   <div class="container">
-    <div class="year" id="year"></div>
+    <div class="year" id="year">2026</div>
     <h1>Happy New Year!</h1>
-    <h2>Wishing you joy, success, and new beginnings ✨</h2>
-    <button onclick="launchFireworks()">Celebrate 🎆</button>
+    <p class="message">
+      Wishing you a year filled with joy, prosperity, good health, and endless adventures.<br>
+      May 2026 bring you new opportunities, cherished moments, and dreams come true ✨
+    </p>
+    <button onclick="launchFireworks()">Launch Fireworks 🎆</button>
   </div>
 
-  <footer>
-    Made with 🩷 by Abhi Raj Singh • Happy new year to all of you
-  </footer>
+  <footer>Made with ❤️ by Abhi Raj Singh</footer>
 
   <script>
-    const yearEl = document.getElementById('year');
-    yearEl.textContent = new Date().getFullYear();
+    // Set the upcoming year
+    document.getElementById('year').textContent = new Date().getFullYear() + 1;
 
+    // Falling confetti
+    function createConfetti() {
+      const confetti = document.createElement('div');
+      confetti.className = 'confetti';
+      confetti.style.left = Math.random() * 100 + 'vw';
+      const colors = ['#ffd700', '#ff9f1c', '#ff4d4d', '#4dd2ff', '#ff69b4'];
+      confetti.style.background = colors[Math.floor(Math.random() * colors.length)];
+      confetti.style.animationDuration = (Math.random() * 5 + 5) + 's';
+      confetti.style.animationDelay = Math.random() * 2 + 's';
+      document.body.appendChild(confetti);
+      setTimeout(() => confetti.remove(), 12000);
+    }
+    setInterval(createConfetti, 300);
+
+    // Twinkling stars top & bottom
+    function createStars(container) {
+      for (let i = 0; i < 30; i++) {
+        const star = document.createElement('div');
+        star.className = 'stars';
+        star.style.left = Math.random() * 100 + '%';
+        star.style.top = Math.random() * 100 + '%';
+        star.style.animationDelay = Math.random() * 5 + 's';
+        container.appendChild(star);
+      }
+    }
+    createStars(document.querySelector('.decoration-top'));
+    createStars(document.querySelector('.decoration-bottom'));
+
+    // Fixed fireworks function
     function launchFireworks() {
-      for (let i = 0; i < 8; i++) {
-        createRocket();
+      for (let i = 0; i < 10; i++) {
+        setTimeout(createFirework, i * 150);
       }
     }
 
-    function createRocket() {
-      const rocket = document.createElement('div');
-      rocket.className = 'rocket';
-      rocket.style.left = Math.random() * window.innerWidth + 'px';
-      document.body.appendChild(rocket);
+    function createFirework() {
+      const container = document.createElement('div');
+      container.className = 'firework-container';
+      container.style.left = (20 + Math.random() * 60) + 'vw';
+      container.style.top = (20 + Math.random() * 60) + 'vh';
+      document.body.appendChild(container);
 
-      rocket.addEventListener('animationend', () => {
-        explode(rocket.offsetLeft, rocket.offsetTop);
-        rocket.remove();
-      });
-    }
+      const colors = ['#ffd700', '#ff9f1c', '#ff4d4d', '#4dd2ff', '#ff69b4'];
+      const color = colors[Math.floor(Math.random() * colors.length)];
 
-    function explode(x, y) {
-      for (let i = 0; i < 12; i++) {
-        const spark = document.createElement('div');
-        spark.className = 'firework';
-        spark.style.left = x + 'px';
-        spark.style.top = y + 'px';
-        spark.style.animationDelay = Math.random() * 0.5 + 's';
-        document.body.appendChild(spark);
-        setTimeout(() => spark.remove(), 1500);
+      // Create 20 particles
+      for (let j = 0; j < 20; j++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.background = color;
+        particle.style.boxShadow = `0 0 15px ${color}`;
+
+        const angle = (j / 20) * 360;
+        const distance = 80 + Math.random() * 70;
+        const x = Math.cos(angle * Math.PI / 180) * distance;
+        const y = Math.sin(angle * Math.PI / 180) * distance;
+
+        particle.style.setProperty('--x', x + 'px');
+        particle.style.setProperty('--y', y + 'px');
+
+        container.appendChild(particle);
       }
+
+      // Remove container after animation
+      setTimeout(() => container.remove(), 2000);
     }
 
-    // Auto rockets
-    setInterval(launchFireworks, 2200);
+    // Auto fireworks every 3 seconds
+    setInterval(launchFireworks, 3000);
+    launchFireworks(); // Start immediately
   </script>
 </body>
 </html>
-
