Change background image in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       height: 100vh;
       font-family: 'Poppins', sans-serif;
-      background: url('https://static.vecteezy.com/system/resources/thumbnails/050/781/873/small/beauty-purple-sunset-and-silhouette-from-tree-mirroring-reflection-on-ocean-water-photo.JPG') no-repeat center center/cover;
+      background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTTF0tPh3ON0hIOuNafvju1QhxgdhdyT9mIXNFGjboTKVZWZu2RnHktzE&s=10') no-repeat center center/cover;
       color: #fff;
       overflow: hidden;
       display: flex;
