Fix year display to show current year

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
   <script>
     // Set the upcoming year
-    document.getElementById('year').textContent = new Date().getFullYear() + 1;
+    document.getElementById('year').textContent = new Date().getFullYear();
 
     // Falling confetti
     function createConfetti() {
